[package]
name = "gison-rust-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
[workspace]
members = ["axum-learn", "hello-world", "generate-random-number", "tokio-learn", "deep-into-rust", "rust-basic", "tokio-learn", "rust-spider"]
