[package]
name = "rust-actix-web-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.4.0"
actix-cors="0.6.4"
serde={version = "1.0.192",features = ["derive"]}
chrono={version = "0.4.31",features = ["serde"]}
env_logger="0.10.0"
uuid={version = "1.5.0",features = ["v4"]}