[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-rt = "2.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
diesel = "1.4.8"
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
listenfd = "0.4.0"
log = "0.4.14"
serde = "1.0.133"
serde_json = "1.0.75"
r2d2 = "0.8.9"
uuid = {version="0.8.2",features=["serde","v4"]}
futures = "0.3.19"