[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
#rocket = { version = "0.5.0-rc.4", features = ["secrets", "tls", "json"] }
diesel = {version = "1.4.5",features = ["mysql","r2d2"]}