[package]
name = "rust-with-tdengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taos = { version = "*" }
taos-sys = "0.12.0"
chrono = "0.4.35"
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
