[package]
name = "rust-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
scraper = "0.18.1"
csv = "1.3.1"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
spider = "2.13.25"
