[package]
name = "online-checker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true


[dependencies]
tokio.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
xid.workspace = true
jsonwebtoken.workspace = true
config.workspace = true
dotenv.workspace = true
tower-http.workspace = true
